Update Demo for 0.1 changes incl 0.1 recipes & config

--- a/.env
+++ b/.env
@@ -19,8 +19,10 @@ APP_ENV=dev
 APP_SECRET=ccb9dca72dce53c683eaaf775bfdb253
 ###< symfony/framework-bundle ###
 
-HUGGINGFACE_API_KEY=hf-...
+###> symfony/ai-hugging-face-platform ###
+HUGGINGFACE_API_KEY=
+###< symfony/ai-hugging-face-platform ###
 
-###> symfony/ai-bundle ###
-OPENAI_API_KEY=sk-...
-###< symfony/ai-bundle ###
+###> symfony/ai-open-ai-platform ###
+OPENAI_API_KEY=
+###< symfony/ai-open-ai-platform ###
