Add support for extension exclusion in Mate
Add support for 'extension: false' flag in extra.ai-mate configuration
to exclude packages from being discovered as extensions. This is useful
for vendor packages that use Mate for internal development tooling but
should not be detected as user-facing extensions.

Changes:
- InitCommand now sets 'extension: false' by default in composer.json
- ComposerExtensionDiscovery skips packages with 'extension: false'
- Added informative note in init command output
- Added comprehensive test coverage (7 new test cases)
- Updated documentation (CHANGELOG.md, CLAUDE.md)

When a package is installed in other projects, it will be completely
hidden from extension discovery if the flag is set to false.

--- a/composer.json
+++ b/composer.json
@@ -103,6 +103,7 @@
             "require": "8.0.*"
         },
         "ai-mate": {
+            "extension": false,
             "scan-dirs": [
                 "mate/src"
             ],
