--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,18 @@
     "description": "Symfony AI Demo Application",
     "license": "MIT",
     "type": "project",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/amazeeio-solutions/symfony-amazeeai-configure.git"
+        }
+    ],
     "require": {
         "php": ">=8.4",
         "ext-ctype": "*",
         "ext-gd": "*",
         "ext-iconv": "*",
+        "amazeeio/symfony-amazeeai-configure": "^0.0.1",
         "league/commonmark": "^2.7.1",
         "mrmysql/youtube-transcript": "^0.0.5",
         "nyholm/psr7": "^1.8",
