--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,13 @@
     "type": "project",
     "repositories": [
         {
+            "type": "path",
+            "url": "lib/amazeeai-bridge",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
             "type": "vcs",
             "url": "https://github.com/amazeeio-solutions/symfony-amazeeai-configure.git"
         }
@@ -20,6 +27,7 @@
         "nyholm/psr7": "^1.8",
         "php-http/discovery": "^1.20",
         "symfony/ai-agent": "^0.3",
+        "symfony/ai-amazee-ai-platform": "@dev",
         "symfony/ai-bundle": "^0.3",
         "symfony/ai-chat": "^0.3",
         "symfony/ai-clock-tool": "^0.3",
