--- a/config/packages/ai.yaml
+++ b/config/packages/ai.yaml
@@ -123,7 +123,7 @@ services:
         autoconfigure: true
 
     app.amazeeai_model_catalog:
-        class: 'App\Platform\AmazeeAiModelCatalog'
+        class: 'Symfony\AI\Platform\Bridge\AmazeeAi\ModelApiCatalog'
         arguments:
             $httpClient: '@http_client'
             $baseUrl: '%env(AMAZEEAI_LLM_API_URL)%'
