--- a/config/packages/ai.yaml
+++ b/config/packages/ai.yaml
@@ -4,14 +4,9 @@ ai:
             api_key: '%env(OPENAI_API_KEY)%'       # kept for Speech STT/TTS only
         huggingface:
             api_key: '%env(HUGGINGFACE_API_KEY)%'
-        generic:
-            amazeeai:
-                base_url: '%env(AMAZEEAI_LLM_API_URL)%'
-                api_key: '%env(AMAZEEAI_LLM_KEY)%'
-                model_catalog: 'app.amazeeai_model_catalog'
     agent:
         blog:
-            platform: 'ai.platform.generic.amazeeai'
+            platform: 'ai.platform.amazeeai'
             model: 'claude-3-5-sonnet'
             tools:
                 - 'Symfony\AI\Agent\Bridge\SimilaritySearch\SimilaritySearch'
@@ -22,23 +17,23 @@ ai:
             memory:
                 service: 'App\Blog\SymfonyVersionsMemory'
         stream:
-            platform: 'ai.platform.generic.amazeeai'
+            platform: 'ai.platform.amazeeai'
             model: 'claude-3-5-haiku'
             prompt:
                 file: '%kernel.project_dir%/prompts/stream-chat.txt'
             tools: false
         youtube:
-            platform: 'ai.platform.generic.amazeeai'
+            platform: 'ai.platform.amazeeai'
             model: 'claude-3-5-sonnet'
             tools: false
         recipe:
-            platform: 'ai.platform.generic.amazeeai'
+            platform: 'ai.platform.amazeeai'
             model: 'claude-3-5-sonnet'
             prompt:
                 text: 'You are a helpful cooking assistant. Provide detailed recipes based on user requests.'
             tools: false
         wikipedia:
-            platform: 'ai.platform.generic.amazeeai'
+            platform: 'ai.platform.amazeeai'
             model:
                 name: 'claude-3-5-sonnet'
                 options:
@@ -50,7 +45,7 @@ ai:
                 - 'Symfony\AI\Agent\Bridge\Wikipedia\Wikipedia'
             include_sources: true
         speech:
-            platform: 'ai.platform.generic.amazeeai'
+            platform: 'ai.platform.amazeeai'
             model: 'claude-3-5-sonnet?temperature=1.0'
             prompt: |
                 You are a friendly, positive and energetic voice assistant. You can engage in light discussions, ask
@@ -68,17 +63,17 @@ ai:
                       features, events or community news.
         # Multi-agent setup
         orchestrator:
-            platform: 'ai.platform.generic.amazeeai'
+            platform: 'ai.platform.amazeeai'
             model: 'claude-3-5-haiku'
             prompt: 'You are an intelligent agent orchestrator that routes user questions to specialized agents.'
             tools: false
         technical:
-            platform: 'ai.platform.generic.amazeeai'
+            platform: 'ai.platform.amazeeai'
             model: 'claude-3-5-sonnet'
             prompt: 'You are a technical support specialist. Help users resolve bugs, problems, and technical errors.'
             tools: false
         fallback:
-            platform: 'ai.platform.generic.amazeeai'
+            platform: 'ai.platform.amazeeai'
             model: 'claude-3-5-haiku'
             prompt: 'You are a helpful general assistant. Assist users with any questions or tasks they may have.'
             tools: false
@@ -99,7 +94,7 @@ ai:
                 distance: 'cosine'
     vectorizer:
         amazeeai:
-            platform: 'ai.platform.generic.amazeeai'
+            platform: 'ai.platform.amazeeai'
             model: 'titan-embed-text-v2:0'
     indexer:
         blog:
@@ -128,6 +123,15 @@ services:
             $httpClient: '@http_client'
             $baseUrl: '%env(AMAZEEAI_LLM_API_URL)%'
             $apiKey: '%env(AMAZEEAI_LLM_KEY)%'
+
+    ai.platform.amazeeai:
+        class: 'Symfony\AI\Platform\Platform'
+        factory: ['Symfony\AI\Platform\Bridge\AmazeeAi\PlatformFactory', 'create']
+        arguments:
+            $baseUrl: '%env(AMAZEEAI_LLM_API_URL)%'
+            $apiKey: '%env(AMAZEEAI_LLM_KEY)%'
+            $httpClient: '@http_client'
+            $modelCatalog: '@app.amazeeai_model_catalog'
 
     Symfony\AI\Agent\Bridge\SimilaritySearch\SimilaritySearch:
         $vectorizer: '@ai.vectorizer.amazeeai'
